[project]
name = "rag-production-app"
version = "0.1.0"
description = "A RAG Agent for production use"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "inngest>=0.1.0",
    "llama-index-core>=0.1.0",
    "llama-index-readers-file>=0.1.0",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.7.0",
    "uvicorn>=0.24.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragproductionapp"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"

